# car_search

./: .gitignore  README.md  activate_venv.sh  car_listings.json  car_search_app.py  implementation-summary.md  pyproject.toml  run_tests.py  setup_dev.sh  test.py
config/: .env.sample
debug_output/: dom_snapshot.html  extraction_results.json  page_content.html  pretty_results.json
docs/: activeContext.md  algorithm_design.md  architecture.md  debugging.md  implementation-plan.md  implementation-summary.md  implementation_plan.md  memory_bank.md  planning.md  productContext.md  progress.md  projectbrief.md  status.md  systemPatterns.md  tasks.md  techContext.md  technical.md  ui_design.md
docs/creative/: algorithm_design.md  architecture_design.md  ui_design.md
docs/llm_providers/: README.md  openai.md
scripts/: enable_playwright.sh  playwright_debug.py  playwright_enhanced.py  run_debug.sh  run_enhanced.sh
src/: __init__.py  main.py
src/car_search/: __init__.py  main.py
src/car_search/config/: __init__.py  manager.py  settings.py
src/car_search/core/: __init__.py  logging.py
src/car_search/data/: __init__.py  api_clients.py  car_service.py  search_providers.py  search_providers_playwright.py  search_service.py
src/car_search/llm/: __init__.py
src/car_search/models/: __init__.py  car_data.py  search_parameters.py
src/car_search/search/: __init__.py
src/car_search/ui/: __init__.py  app.py  car_detail_view.py  llm_config_panel.py  main_window.py  results_view.py  search_options_panel.py  search_panel.py
src/cli/: migrate.py
src/config/: __init__.py  settings.py
src/data/: __init__.py  autotrader.py  car_apis.py  db_manager.py  filtering.py  migration.py  param_validation.py  sorting.py  tag_manager.py
src/data/filtering/: filter_manager.py
src/data/migrations/: __init__.py  version_1_add_tag_system.py  version_2_test_migration.py
src/examples/: __init__.py  car_analysis_example.py  car_search_example.py  db_example.py  edmunds_example.py  filter_example.py  gemini_example.py  llm_example.py  migration_example.py  param_processing_example.py  simple_filter_test.py  smartcar_example.py  tag_example.py
src/llm/: __init__.py  provider.py
src/llm/providers/: __init__.py  gemini.py  mock.py  openai.py
src/models/: __init__.py  car.py  search.py
src/services/: __init__.py  car_search.py  comparison.py  condition_assessment.py  mileage_analysis.py  reliability.py
src/services/api_clients/: __init__.py  base_api_client.py  edmunds.py  motorcheck.py  smartcar.py
src/utils/: playwright_utils.py
tests/: __init__.py  car_scraper_test.py  test_filtering.py  test_openai_provider.py  test_sorting.py
tests/car_search/: __init__.py
tests/services/: __init__.py  test_car_search.py
tests/test_data/: autotrader_sample.html
(+7 files in other folders)
